fix(style): use square social icons block on small screens

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -831,7 +831,7 @@ a.zola-anchor {
   .main-info,
   .about-info {
     ul {
-      grid-template-rows: repeat(3, auto);
+      grid-template-rows: repeat(4, auto);
     }
   }
   nav.nav-bar {
